--- a/src/app/pages/comic/comic.component.html
+++ b/src/app/pages/comic/comic.component.html
@@ -81,7 +81,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button routerLink="/comicview/{{allComics[comicIndex].id}}" type="button" class="btn btn-outline-success" data-dismiss="modal">Send To</button>
+          <button routerLink="/comicview/{{allComics[comicIndex].id}}" type="button" class="btn btn-outline-success" data-dismiss="modal">More and Send</button>
         </div>
       </div>
     </div>
