--- a/src/app/pages/comicview/comicview.component.css
+++ b/src/app/pages/comicview/comicview.component.css
@@ -42,7 +42,7 @@
 }
 
 #centerSesion{
-  background-color: white;
+  background-color: rgb(241, 241, 241);
   border-style: solid;
   border-width: medium;
   border-color: #daa520;
