--- a/src/app/pages/comic/comic.component.css
+++ b/src/app/pages/comic/comic.component.css
@@ -1,10 +1,11 @@
 
-
 .containerMain {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  background-color: rgb(54, 54, 54);
+  padding-top: 20px;
 
 }
 
@@ -37,7 +38,7 @@
 }
 
 #carouselContainer{
-  max-height: 600px;
+  max-height: 900px;
 }
 
 #cardZoom{
